# SAE-Probes

./: .gitignore  Makefile  README.md  ai_vs_humanmade_plot.py  basic_test.py  combine_results.py  compare_single_dataset.py  consolidated_sae_activations_generator.py  create_results_summary.py  generate_model_activations.py  generate_model_and_sae_multi_token_acts.py  generate_sae_activations.py  generate_sae_activations_optimized.py  handle_sae_bench_saes.py  k_vs_auc_plot.py  main.py  multi_token_data_scarcity_baselines.py  multi_token_data_scarcity_sae.py  ood_comparison.py  plot_combined.ipynb  plot_llama.ipynb  plot_multi_token.py  plot_multi_token_data_scarcity_results.py  plot_normal.ipynb  plot_ood.ipynb  pyproject.toml  rebuttal_plots.py  run_baselines.py  run_multi_token_acts.py  sae_improvement.ipynb  save_sae_acts_and_train_probes.sh  save_sae_acts_optimized.sh  simple_sae_comparison.py  train_sae_probes.py  train_sae_probes.sh  utils_data.py  utils_sae.py  utils_training.py  visualize_results.py  visualize_sae_details.py  (+2 more)
cloud_deployment/: Dockerfile  deploy_runpod.sh  docker-compose.yml  run_cloud_generation.py
dataset_investigations/: aimade_investigation.ipynb  gluecola_investigate.ipynb
michael_documentation/: CLOUD_GPU_DEPLOYMENT_PLAN.md  CRITICAL_UPDATE_SUMMARY.md  DATA_DIRECTORY_COMPARISON.md  FILE_LOCATIONS.md  GPU_CLOUD_COST_ANALYSIS.md  MATCHED_COMPARISON_FINDINGS.md  OOD_INVESTIGATION.md  REPOSITORY_GUIDE.md  REPRODUCTION_CRITIQUE_V2.md  REPRODUCTION_FINDINGS.md  REPRODUCTION_PLAN.md  REPRODUCTION_STATUS.md
(+524 files in other folders)
