[project]
name = "sae-probes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "datasets>=2.17.1,<3.0.0",
    "natsort>=8.4.0",
    "sae-bench>=0.4.2",
    "sae-lens>=5.11.0",
    "scikit-learn>=1.7.0",
    "torch>=2.7.1",
    "transformer-lens>=2.16.1",
    "transformers>=4.53.2",
    "xgboost>=3.0.2",
]
